# expense-advisor-bot

./: .env.example  .gitignore  README.md  config.py  pyproject.toml
application/: services.py
diagrams/: pipeline.md  pipeline.puml
infrastructure/: backend_client.py
src/: config.py  main.py
src/application/: services.py
src/domain/: file.py
src/infrastructure/: backend_client.py
src/modules/bank_statement_analyzer/: main.py  pipeline.py
src/modules/bank_statement_analyzer/domain/entities/: category.py
src/modules/bank_statement_analyzer/domain/interfaces/: pipeline_item.py
src/modules/bank_statement_analyzer/infrastructure/services/anomalies/: anomalies_spending.py
src/modules/bank_statement_analyzer/infrastructure/services/building_user_profile/: build_user_profile.py
src/modules/bank_statement_analyzer/infrastructure/services/classification_other_operations/: classifications.py
src/modules/bank_statement_analyzer/infrastructure/services/estimation_savings/: estimate_savings.py
src/modules/bank_statement_analyzer/infrastructure/services/loader/: loader.py  smart_category.py
src/modules/bank_statement_analyzer/infrastructure/services/regular_expenses/: search_for_regular_expenses.py
src/modules/financial_intelligence/: main.py
src/modules/financial_intelligence/domain/entites/: mcc.py
src/modules/financial_intelligence/domain/entities/: category.py  mcc.py
src/modules/financial_intelligence/domain/interfaces/: pipeline_item.py
src/modules/financial_intelligence/pipeline/: pipeline.py
(+7 files in other folders)
