[project]
name = "bank-statements-tg-bot"
version = "0.1.0"
description = "Telegram bot for uploading and processing bank statements"
authors = [
    {name = "katrinreid"},
    {name = "domster704", email = "domster704@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram (>=3.22.0,<4.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "numpy (>=2.4.1,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "sentence-transformers (>=5.2.0,<6.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
]

[tool.poetry]
packages = [{ include = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"